--- a/django/DjangoBTK/COURSEAPP/pages/templates/pages/about.html
+++ b/django/DjangoBTK/COURSEAPP/pages/templates/pages/about.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>
-        about page
-    </h1>
-</body>
-</html>
+
+{% extends "layout.html" %}
+{% block page_title %}
+hakkımızda sayfası
+{% endblock page_title %}
+{% block content %}
+<h1>hakkımızda</h1>
+{% endblock  %}
