--- a/django/DjangoBTK/COURSEAPP/pages/templates/pages/contact.html
+++ b/django/DjangoBTK/COURSEAPP/pages/templates/pages/contact.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Contact page</h1>
-</body>
-</html>
+
+{% extends "layout.html" %}
+{% block page_title %}
+iletişi sayfası{% endblock page_title %}
+{% block content %}
+
+<h1>İletişim</h1>
+
+{% endblock  %}
+
+
