--- a/django/DjangoBTK/COURSEAPP/templates/layout.html
+++ b/django/DjangoBTK/COURSEAPP/templates/layout.html
@@ -13,23 +13,7 @@
   <body>
     <!--NAVBAR-->
 
-    <nav class="navbar navbar-expand-lg bg-danger navbar-dark">
-      <div class="container">
-        <a href="/" class="navbar-brand" >Course App</a>
-        <ul class="navbar-nav me-auto ">
-          <li class="nav-item">
-            <a href="/" class="nav-link">Kurslar</a>
-          </li>
-          <li class="nav-item">
-            <a href="/contact" class="nav-link">İletişim</a>
-          </li>
-          <li class="nav-item">
-            <a href="/about" class="nav-link">Hakkımızda</a>
-          </li>
-         
-        </ul>
-      </div>
-    </nav> 
+  {% include 'partials/_nav.html  ' %}
 
    
 <div class="container mt-3 ">
