--- a/django/DjangoBTK/COURSEAPP/pages/templates/pages/contact.html
+++ b/django/DjangoBTK/COURSEAPP/pages/templates/pages/contact.html
@@ -1,11 +1,21 @@
 
 {% extends "layout.html" %}
+
 {% block page_title %}
-iletişi sayfası{% endblock page_title %}
+
+{% endblock page_title %}
 {% block content %}
 
 <h1>İletişim</h1>
+<div class="container mt-3 ">
+    <div class="row">
+        <div class="col-12 bg-warning ">
+         <h1>İletişim</h1>
+          
 
+        </div>
+    </div>
+</div>
 {% endblock  %}
 
 
