--- a/django/DjangoBTK/COURSEAPP/pages/templates/pages/index.html
+++ b/django/DjangoBTK/COURSEAPP/pages/templates/pages/index.html
@@ -6,6 +6,24 @@ anasayfa
 
 
 {% block content %}
-<h1>anasayfa</h1>
+
 <i class="fa-solid fa-bug-slash"></i>
+<div class="container mt-3 ">
+    <div class="row">
+        <div class="col-3 bg-warning ">
+             <!--MENÜ-->
+             <div class="list-group">
+<a href="#" class="list-group-item list-group-item-action" >Programlama</a>
+<a href="#" class="list-group-item list-group-item-action" >Web Geliştirme</a>
+<a href="#" class="list-group-item list-group-item-action" >Mobil Geliştirme</a>
+
+             </div>
+        </div>
+        <div class="col-9 bg-success ">
+ <!--CONTENT-->
+ <h1>anasayfa</h1>
+
+        </div>
+    </div>
+</div>
 {% endblock  %}
