--- a/django/DjangoBTK/COURSEAPP/templates/layout.html
+++ b/django/DjangoBTK/COURSEAPP/templates/layout.html
@@ -15,26 +15,8 @@
 
   {% include 'partials/_nav.html  ' %}
 
-   
-<div class="container mt-3 ">
-    <div class="row">
-        <div class="col-3 bg-warning ">
-             <!--MENÜ-->
-             <div class="list-group">
-<a href="#" class="list-group-item list-group-item-action" >Programlama</a>
-<a href="#" class="list-group-item list-group-item-action" >Web Geliştirme</a>
-<a href="#" class="list-group-item list-group-item-action" >Mobil Geliştirme</a>
+  {% block content %} {% endblock  %}
 
-             </div>
-        </div>
-        <div class="col-9 bg-success ">
- <!--CONTENT-->
-{% block content %}
-
-{% endblock content %}
-        </div>
-    </div>
-</div>
    
 
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
